[fix] moved date of the image to top left to avoid overlapping with offline annotation

--- a/src/pages/Gallery/ImageList/Image/image.css
+++ b/src/pages/Gallery/ImageList/Image/image.css
@@ -16,7 +16,7 @@
 .created-date {
   position: absolute;
   left: 8px;
-  bottom: 4px;
+  top: 4px;
 }
 
 .image {
